# InogeniLoupdeckControlPlugin

./: .gitignore  CMakeLists.txt  LICENSE  README.md
SerialBridgeDotNet/: .gitignore  Readme.md
SerialBridgeDotNet/DotNetWrapper/: Program.cs
SerialBridgeDotNet/src/: .gitignore  CMakeLists.txt  main.c  serial.c  serial.h
src/: InogeniLoupdeckControlPlugin.sln
src/InogeniLoupdeckControlPlugin/: InogeniHandler.cs  InogeniLoupdeckControlApplication.cs  InogeniLoupdeckControlPlugin.cs  InogeniLoupdeckControlPlugin.csproj  SerialBridge.cs
src/InogeniLoupdeckControlPlugin/Actions/: AbstractPcSetCommand.cs  Pc1SetCommand.cs  Pc2SetCommand.cs
src/InogeniLoupdeckControlPlugin/Helpers/: Colors.cs  PluginLog.cs  PluginResources.cs
src/InogeniLoupdeckControlPlugin/metadata/: LoupedeckPackage.yaml
